--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.html
@@ -59,7 +59,9 @@
     <div class="spacer-top"></div>
     <div class="content-panel-stack">
       <div>
-        <h1>Evacuation Orders and Alerts</h1>
+        <h1>Evacuation Orders and Alerts
+          <div *ngIf="showWarning" class="preview-warning">Warning: Manually entered Evacuation Orders and Alerts cannot be previewed</div>
+        </h1>
         <div class="content-panel-subtitle">Evacuation Information</div>
         <div *ngFor="let evac of evacOrders">
           <a [href]="evac.uri ? evac.uri : ''" target="_blank" rel="noopener" class="content-panel-link">{{evac.eventName}} ({{evac.issuingAgency}})</a>
