--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/admin-incident-form.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="button-holder">
       <button class="preview-btn" mat-button (click)="onShowPreview()">Show Preview</button>
-      <button class="publish-btn" mat-button color="primary" (click)="publishChanges()">Publish Changes</button>
+      <button [disabled]="validFormCheck()" class="publish-btn" mat-button color="primary" (click)="publishChanges()">Publish Changes</button>
     </div>
   </div>
 </div>
