WFNEWS-850: Update stats URL

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -187,7 +187,7 @@
             <div class="value-cell">{{row.areaBurned ? row.areaBurned.toLocaleString() : 0}}</div>
           </div>
         </div>
-        <a class="learn-more-button" rel="noopener" target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/fire-centres?keyword=fire&keyword=centre">Learn More about Statistics &amp; Geospatial Data</a>
+        <a class="learn-more-button" rel="noopener" target="_blank" href="https://www2.gov.bc.ca/gov/content/safety/wildfire-status/about-bcws/wildfire-statistics">Learn More about Statistics &amp; Geospatial Data</a>
       </div>
     </div>
   </div>
