--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -12,7 +12,7 @@
                 <article>
                     <h2 class="black">
                         <div class="fire-icon-container">
-                            <mat-icon class="fire-icon">local_fire_department</mat-icon>
+                          <img class="icon" height="24" width="24" src="/assets/images/local_fire_department.png" alt="local_fire_department">
                         </div>
                         Wildfire of Note
                     </h2>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="tags">
                     <span *ngIf="incident.fireOfNoteInd" class="wildifire-of-note-tag">
-                        <mat-icon class="fire-icon" style="vertical-align:middle">local_fire_department</mat-icon>
+                        <span class='material-icons-outlined fire-icon' style="vertical-align:middle">local_fire_department</span>
                         Wildfire of Note
                     </span>
                     <span class="stage-of-control-status-indicator {{incident.stageOfControlCode}}">
