WFNEWS-675: Update hectares label

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -177,7 +177,7 @@
             <div class="value-cell"><strong>New Lightning Caused Fires</strong></div>
             <div class="value-cell"><strong>New Human Caused Fires</strong></div>
             <div class="value-cell"><strong>Total Fires</strong></div>
-            <div class="value-cell"><strong>Total Area Burned (Ha)</strong></div>
+            <div class="value-cell"><strong>Total Area Burned (Hectares)</strong></div>
           </div>
           <div class="row" *ngFor="let row of fireStats">
             <div class="cell">{{row.name}}</div>
