--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/sticky-widget.component.html
@@ -2,8 +2,8 @@
     <div id="watchlist" *ngIf="showWatchlist" class="watchlist-container" (mouseleave)="delayClose()" (mouseenter)="stopDelay()" (blur)="loadWatchlist()">
       <mat-progress-bar style="margin-left: 0px; width: 100% !important;" mode="determinate" [value]="progressValue"></mat-progress-bar>
       <div class="watchlist-header">
-        <div>Watchlist</div>
-        <span class="subtitle">Add a fire to your watchlist by clicking the <mat-icon style="color: #003366">bookmark_border</mat-icon> icon.</span>
+        <div>Watch List</div>
+        <span class="subtitle">Add a fire to your watch list by clicking the <mat-icon style="color: #003366">bookmark_border</mat-icon> icon.</span>
         <div style="margin-left: auto; cursor: pointer;" (click)="loadWatchlist()"><mat-icon>close</mat-icon></div>
       </div>
       <div class="watchlist-items">
@@ -12,7 +12,7 @@
           <div class="item-body">{{item.lastUpdatedTimestamp}}</div>
         </div>
         <div *ngIf="!watchlist || watchlist.length === 0" style="margin: auto;">
-          You have no items on your watchlist
+          You have no items on your watch list
         </div>
       </div>
     </div>
