--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.html
@@ -147,7 +147,7 @@
         </ng-container>
 
         <ng-container matColumnDef = "addToWatchlist">
-            <th mat-header-cell *matHeaderCellDef mat-non-sort-header> Add to Watchlist</th>
+            <th mat-header-cell *matHeaderCellDef mat-non-sort-header> Add to Watch List</th>
             <td mat-cell style="cursor: pointer;" *matCellDef="let item" (click)="onWatchlist(item) ? removeFromWatchlist(item) : addToWatchlist(item)">
                 <span #el ><mat-icon style="color:#1A5A96">{{onWatchlist(item) ? 'bookmark' : 'bookmark_border'}}</mat-icon></span>
             </td>
