--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-gallery-panel/incident-gallery-panel.component.html
@@ -20,14 +20,15 @@
         </div>
         <div>
           <lightgallery *ngIf="showImages" [settings]="settings" [onBeforeSlide]="onBeforeSlide" [onInit]="onInit" class="gallery-container">
-            <a *ngFor="let item of images"
+            <a *ngFor="let item of images; let i = index"
+                [attr.data-index]="i"
                 data-lg-size="480-475-480, 800-791-800, 1406-1390"
                 class="gallery-item"
                 [href]="item.href"
                 [data-src]="item.href"
                 [data-responsive]="item.href + ' 800'"
                 style="padding: 5px;">
-                <img class="img-responsive" [src]="item.thumbnail" />
+                <img [id]="i + '-img-thumb'" alt="Image" class="img-responsive" [src]="item.thumbnail" (error)="handleImageFallback(item, i)"/>
             </a>
           </lightgallery>
 
