--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
@@ -122,9 +122,11 @@ select{
           display: flex;
           font-weight: 700;
           padding: 5px 20px;
+          width: 100%;
           .item-title{
             font-size: 1rem;
             width: 100%;
+            max-width: 135px;
           }
           .item-content{
             width: 100%;
@@ -151,12 +153,11 @@ select{
   border-radius: 0px;
 }
 
-
-
+::ng-deep .mat-content {
+  flex-direction: column !important;
+}
 
 @media (max-width: 820px) {
-  
-  
   .contents> * {
     flex: 1 1 100%;
     margin: 8px;
