--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -2,6 +2,14 @@
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
+.spacer-bottom {
+  padding-bottom: 80px; /* this amount of padding is ridiculous... looks terrible - should be 30/20 */
+}
+
+.spacer-top {
+  padding-top: 70px;
+}
+
 .panel {
   background-color: white;
   padding: 22px;
