Remove extra font size setting

--- a/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/sticky-widget/contact-widget-dialog/contact-widget-dialog.component.html
@@ -22,7 +22,7 @@
                             <div class="field">
                                 <mat-label class="label required">Email<span style="color: red">*</span></mat-label>
                                 <input  matInput type="text" formControlName="email" aria-label="Email" />
-                                <mat-error style="font-size: 15px; font-size: 15px; padding-top: 7px; ">{{ mailErrorMessages }}</mat-error>
+                                <mat-error style="font-size: 15px; padding-top: 7px; ">{{ mailErrorMessages }}</mat-error>
                             </div>
                         </div>
                         <div class="row">
