Reduce padding from 80 to 40

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -3,11 +3,11 @@
 }
 
 .spacer-bottom {
-  padding-bottom: 80px; /* this amount of padding is ridiculous... looks terrible - should be 30/20 */
+  padding-bottom: 40px;
 }
 
 .spacer-top {
-  padding-top: 70px;
+  padding-top: 30px;
 }
 
 .panel {
