WFNEWS-670: Add 160px of spacing (#579)
* WFNEWS-670: Add 160px of spacing

This amount of spacing, regardless of meeting the TAC, looks terrible. Strongly recommending we don't use this

* Reduce padding from 80 to 40

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-panel/incident-info-panel.component.scss
@@ -2,6 +2,14 @@
   font-family: 'BCSans', 'Noto Sans', Verdana, Arial, sans-serif;
 }
 
+.spacer-bottom {
+  padding-bottom: 40px;
+}
+
+.spacer-top {
+  padding-top: 30px;
+}
+
 .panel {
   background-color: white;
   padding: 22px;
