Text and styling updates

--- a/client/wfnews-war/src/main/angular/src/app/app.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/app.component.html
@@ -51,11 +51,11 @@
 
   <router-outlet></router-outlet>
 
-  <wf-footer
+  <!-- wf-footer
   [footerItems]="footerMenu"
   [config]="applicationConfig"
   [(state)]="applicationState"
   (activeItemChanged)="navigateToFooterPage($event)"
-  ></wf-footer>
+  ></wf-footer -->
 </div>
 </wf-application>
