--- a/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-stats-component/wf-stats.component.html
@@ -38,7 +38,7 @@
     </mat-tab-group>
     <div *ngIf="tabIndex === 0" class="fire-date-box">
       <h2>Active Fires</h2>
-      <p style="color: black;">"Active Fires" refers to fires that are actively burning at this time. It does not include fires that have been put out or extinguished</p>
+      <p style="color: black;">"Active Fires" refers to fires that are actively burning at this time. It does not include fires that have been called out or extinguished.</p>
     </div>
     <div *ngIf="tabIndex === 1" class="fire-date-box">
       <h2>Fires this Year</h2>
