--- a/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/incident-identify-panel/incident-identify-panel.component.html
@@ -33,7 +33,7 @@
   <div class="divider"></div>
   <div class="info-panel">
     <div class="gutter"><span class="label">Size: </span><span class="paragraph-format">{{incident.incidentSizeEstimatedHa ? incident.incidentSizeEstimatedHa.toLocaleString() : 0}} Hectares</span></div>
-    <div class="paragraph-format">Fire size is estimated and based on the last known mapped size in hectares. This information could be out-of-date at this time due to rapidly changing conditions</div>
+    <div class="paragraph-format">Fire size is estimated and based on the most current information available.</div>
     <div *ngIf="incident.incidentLocation">
       <div class="gutter"><span class="label">Location</span></div>
       <div class="paragraph-format">{{incident.incidentLocation}}</div>
