--- a/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-bans-prohibitions/panel-bans-prohibitions.component.html
@@ -21,7 +21,7 @@
           </ul>
           <img class="image-size" src="../../../assets/images/Category 2 Size.svg" alt="Category 2" />
         </div>
-        <h3>Campfires</h3>
+        <h3>Category 1 Campfires</h3>
         <div class="list-rows paragraph-format">
           <ul>
             <li>Any fire smaller than 0.5 metres high by 0.5 metres wide</li>
