--- a/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-wildfire-stage-of-control/panel-wildfire-stage-of-control.component.html
@@ -63,10 +63,10 @@
             <div>{{collection? collection.totalRowCount: 0}} Results</div>
         </div>
         <div class="wildfire-checkboxs">
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="activeWildfiresInd">Active Wildfires</mat-checkbox>
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="outWildfiresInd">Out Wildfires</mat-checkbox>
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="newFires">New Wildfires</mat-checkbox>
-            <mat-checkbox (change)="stageOfControlChanges($event)" [(ngModel)]="wildfiresOfNoteInd">Wildfires of Note</mat-checkbox>
+            <mat-checkbox aria-label="active" (change)="stageOfControlChanges($event)" [(ngModel)]="activeWildfiresInd">Active Wildfires</mat-checkbox>
+            <mat-checkbox aria-label="out" (change)="stageOfControlChanges($event)" [(ngModel)]="outWildfiresInd">Out Wildfires</mat-checkbox>
+            <mat-checkbox aria-label="new" (change)="stageOfControlChanges($event)" [(ngModel)]="newFires">New Wildfires</mat-checkbox>
+            <mat-checkbox aria-label="fire-of-note" (change)="stageOfControlChanges($event)" [(ngModel)]="wildfiresOfNoteInd">Wildfires of Note</mat-checkbox>
         </div>
         <div *ngIf="loading">
           <mat-spinner style="margin: auto;" *ngIf="!loaded" [diameter]="50"></mat-spinner>
