--- a/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/current-alert-component/current-alert-component.component.scss
@@ -48,10 +48,11 @@ select{
 
 .mat-expansion-panel{
     box-shadow: none;
+    margin-top: 16px;
 }
 
 .mat-expansion-panel-header{
-    background-color: #f1f1f3;
+    background-color: #f1f1f3 !important; 
     &:hover{
         background-color: #f1f1f3;
       }
@@ -59,7 +60,6 @@ select{
         font-size: 20px;
         font-weight: 400;
         color: #1c5a97;
-        margin-bottom: 10px;
     }
 }
 
