--- a/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfire-resources/resource-panel/resource-panel.component.scss
@@ -17,11 +17,12 @@
     width: 100%;
   }
   .panel-container> * {
-    flex: 1 1 20vw;
+    flex: 1 1 275px;
   }
   .resource-info {
     border: 1px solid #e9eff5;
     padding: 20px;
+    max-width: 50%;
     .info-title {
       font-size: 18px;
       font-weight: 700;
