--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -35,6 +35,8 @@
 
       .search-bar {
         padding: 0 30px;
+        padding-right: 16px;
+        position: relative;
         display: flex;
         align-items: center;
 
@@ -54,7 +56,8 @@
           line-height: 20px;
           font-size: 10px;
           color: #999999;
-          right: 38px;
+          right: 15px;
+          position: absolute;
         }
       }
 
@@ -62,7 +65,9 @@
         padding-left: 5px;
         padding-right: 10px;
         border: 1px solid grey;
-        border-radius: 2px;
+        border-radius: 5px;
+        height: 40px;
+        display: flex;
 
         .mat-raised-button {
           box-shadow: none;
