--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <ng-template #showDisclaimer>
-            There are currently no maps associated with this incident.
+            <div *ngIf="!isPreview">There are currently no maps associated with this incident.</div>
         </ng-template>
     </div>
 </div>
