adjust disclaimer link button on mobile device

--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.scss
@@ -297,6 +297,9 @@ mat-panel-title {
   .hide {
     display: none !important;
   }
+  .search-row {
+    padding-right: 0px !important;
+  }
 }
 
 .location-icon {
@@ -397,7 +400,7 @@ mat-panel-title {
   }
 
   .search-bar {
-    width: calc(100vw - 85px);
+    width: calc(100vw - 150px);
   }
 
   .search-row {
