--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/incident-details-panel/incident-details-panel.component.html
@@ -25,7 +25,7 @@
         <div class="field size-full">
           <mat-form-field class="item-full-width" appearance="outline" floatLabel="always">
             <mat-label class="label required">Location</mat-label>
-            <input matInput type="text" formControlName="location" [(ngModel)]="incident.location">
+            <input matInput type="text" formControlName="location" [(ngModel)]="incident.location" [placeholder]="incident.incidentData ? incident.incidentData.incidentLocation.geographicDescription : ''">
           </mat-form-field>
         </div>
       </div>
