wfnews 896 map tab wording change. warning text style change

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-maps-panel/incident-maps-panel.component.html
@@ -1,7 +1,7 @@
 <div class="panel">
     <div class="header-row">
       <h4>Wildfire Maps
-        <div *ngIf="showMapsWarning" class="preview-warning">Warning: Uploaded Images or Videos cannot be previewed</div>
+        <div *ngIf="showMapsWarning" class="preview-warning">Warning: Uploaded Maps cannot be previewed</div>
       </h4>
     </div>
     <div class="content-panel">
