Move time dimension toggle to left side

--- a/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-map-container/wf-map-container.component.scss
@@ -156,6 +156,7 @@
         order: -1;
         align-self: flex-start;
         bottom: 0;
+        left: 0;
         .play-pause {
             margin-right: 5px;
             display: flex;
