added extra trackers

--- a/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/panel-evacuation-orders-and-alerts/panel-evacuation-orders-and-alerts.component.html
@@ -32,9 +32,9 @@
 <section>
     <h1>MORE INFORMATION</h1>
     <article>
-        <p><a (click)="snowplow('CURRENT-INFO-LINK')" href="https://www.emergencyinfobc.gov.bc.ca/" target="_blank" rel="noopener">Current Evacuation Advisory Information</a></p>
-        <p><a (click)="snowplow('EVAC-GUIDANCE-LINK')" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance" target="_blank" rel="noopener">Evacuee Guidance</a></p>
-        <p><a (click)="snowplow('LOCAL-GOV-LINK')" href="https://www2.gov.bc.ca/gov/content/governments/local-governments/facts-framework/systems" target="_blank" rel="noopener">Local Government System in B.C</a></p>
-        <p><a (click)="snowplow('EMERG-ALERTS-LINK')"href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/emergency-alerts" target="_blank" rel="noopener">B.C. Emergency Alerts</a></p>
+        <p><a (click)="snowplow('orders_outbound_click', 'https://www.emergencyinfobc.gov.bc.ca/')" href="https://www.emergencyinfobc.gov.bc.ca/" target="_blank" rel="noopener">Current Evacuation Advisory Information</a></p>
+        <p><a (click)="snowplow('orders_outbound_click', 'https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance')" href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/evacuee-guidance" target="_blank" rel="noopener">Evacuee Guidance</a></p>
+        <p><a (click)="snowplow('orders_outbound_click', 'https://www2.gov.bc.ca/gov/content/governments/local-governments/facts-framework/systems')" href="https://www2.gov.bc.ca/gov/content/governments/local-governments/facts-framework/systems" target="_blank" rel="noopener">Local Government System in B.C</a></p>
+        <p><a (click)="snowplow('orders_outbound_click', 'https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/emergency-alerts')"href="https://www2.gov.bc.ca/gov/content/safety/emergency-management/preparedbc/evacuation-recovery/emergency-alerts" target="_blank" rel="noopener">B.C. Emergency Alerts</a></p>
     </article>
 </section>
