--- a/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/summary-panel/summary-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/admin-incident-form/summary-panel/summary-panel.component.html
@@ -1,6 +1,7 @@
 <ng-container class="incident-form">
   <mat-card class="info-card news-form-card">
     <fieldset class="field-set">
+      <legend style="display: none">Tombstone Details Card</legend>
       <div class="news-form">
         <div class="field size-quarter">
           <div class="label">Discovery Date</div>
